<resources>
    <string name="my_info">내 정보</string>
    <string name="id">아이디</string>
    <string name="nickname">닉네임</string>
    <string name="email_example">frientree@gmail.com</string>
    <string name="nickname_example">프렌트리</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="set_alarm">알림 설정</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="background_music">BGM</string>
    <string name="music_example">듣기 좋은 음악</string>
    <string name="terms">약관 및 개인정보 처리 방침</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="log_out">로그아웃</string>
    <string name="juice_name_example">선셋 오렌지</string>
    <string name="juice_collection">주스 도감</string>
    <string name="base_tree_message">안녕 나는 프렌트리야!</string>
    <string name="base_fruit_status_message">오늘의 열매가 아직 열리지 않았어요!</string>
    <string name="create_fruit_button_text">오늘의 열매 만들기</string>
    <string name="frientree">Frientree</string>
    <string name="start">START</string>
    <string name="or">or</string>
    <string name="create_fruit_input_method_text">텍스트로 말하기</string>
    <string name="input_by_text_title">나무가 듣고 있어요!</string>
    <string name="input_by_text_hint">텍스트를 입력해보세요!</string>
    <string name="create_fruit_text">열매 저장하기</string>
    <string name="input_id">ID 입력</string>
    <string name="input_password">PW 입력</string>
    <string name="sign_up">회원가입</string>
    <string name="text_divider">|</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="sign_in">로그인</string>
    <string name="id_upper_case">ID</string>
    <string name="id_example">ex) frientree@gmail.com</string>
    <string name="check_email_form">이메일 형식으로 입력해 주세요.</string>
    <string name="auth_code_sending">인증 번호를 전송 중 입니다.</string>
    <string name="auth_number_limit">10분 내로 인증 번호를 입력해 주세요.</string>
    <string name="auth_success">인증에 성공했습니다</string>
    <string name="auth_failure">잘못된 인증 번호 입니다.</string>
    <string name="usable_id">사용 할 수 있는 ID 입니다.</string>
    <string name="unusable_id">사용할 수 없는 ID 입니다.</string>
    <string name="loading_text">열매가 만들어지는\n중이에요!</string>
    <string name="save_fruit_text">열매 저장하기</string>
    <string name="listening_text">나무가 듣고 있어요!</string>
    <string name="create_fruit_by_speech_button_text">다 이야기 했어요</string>
    <string name="speech_second_text">/ 30초</string>
    <string name="emotion_calendar">감정 캘린더</string>
    <string name="today_fruit_statistics_example">오늘 나와 같은 감정을 느낀 사람이 20%예요!</string>
    <string name="fruit_list">열매 리스트</string>
    <string name="make_juice">주스 만들기</string>
    <string name="juice_of_week">이주의 주스</string>
    <string name="juice_condolence_example">이 주는 우울한 주간이었네요. \n 다음 주는 더 좋은 주가 되길 바래요!</string>
    <string name="juice_description">주스 설명</string>
    <string name="juice_ready">주스 만들 준비가 되었어요!</string>
    <string name="fruit_name">행복한 사과</string>
    <string name="emotion">기쁨</string>
    <string name="date_example">01.20</string>
    <string name="juice_graph">주스 그래프</string>
    <string name="juice_shake_guide">흔들어서 주스를 만들어보세요!</string>
    <string name="juice_requirements_fruits">주스를 만들기 위해선 주간 열매가 4개 이상 필요해요!</string>
    <string name="juice_requirements_time">한주가 마무리 되어야 만들 수 있어요!</string>
    <string name="not_enough_fruits">열매를 모으는 중이에요!</string>
    <string name="making_juice">주스 만드는중..</string>
    <string name="receive_leaf_text">이파리 받기</string>
    <string name="send_leaf_text">이파리 날리기</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="password">비밀번호</string>
    <string name="input_auth_number">인증번호입력</string>
    <string name="please_input_auth_number">이메일로 전달된 인증 번호를 입력하세요</string>
    <string name="example_nickname">1~8자의 닉네임을 입력해주세요</string>
    <string name="usable_nickname">사용가능한 닉네임입니다.</string>
    <string name="unusable_nickname">사용할 수 없는 닉네임입니다.</string>
    <string name="example_password">(!#\$%^&amp;*?), 영문, 숫자 각 1개 이상 포함한\n 8~16자리 비밀번호를 입력하세요</string>
    <string name="usable_password">사용가능한 비밀번호입니다.</string>
    <string name="unusable_password">사용할 수 없는 비밀번호입니다.</string>
    <string name="password_match">비밀번호가 일치합니다.</string>
    <string name="password_mismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="empty_text"> </string>
    <string name="network_error">네트워크 연결 실패</string>
    <string name="unknown_error">알 수 없는 에러</string>
    <string name="leaf_category_consolation">위로</string>
    <string name="leaf_category_cheering">응원</string>
    <string name="leaf_category_free">자유</string>
    <string name="leaf_send_text">날려보내기!</string>
    <string name="leaf_blowing_text">후 불어서 이파리를 날려보세요!</string>
    <string name="leaf_receive_text">이파리 받기</string>
    <string name="shaking_leaf_text">흔들어서 이파리를 받아보세요!</string>
    <string name="sending_temp_password">임시 비밀번호를 전송 중 입니다.</string>

    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="year">%d년</string>
    <string name="month">%d월</string>
    <string name="greeting">반가워요,\n함께 감정을 기록해봐요</string>
    <string name="show">보기</string>
    <string name="all_terms_agree">약관 전체 동의</string>
    <string name="now_password">기존 비밀번호</string>
    <string name="new_password">새로운 비밀번호</string>
    <string name="password_mismatch_in_use">현재 사용중인 비밀번호와 일치하지 않습니다.</string>
    <string name="sign_out">회원 탈퇴</string>
    <string name="sign_out_guide">탈퇴 시, 다시 데이터를 복구할 수 없게됩니다. \n정말 탈퇴하시겠습니까?</string>
    <string name="leaf_already_send">이파리는 하루에 한 번 보낼 수 있어요!\n내일 다시 보내러 와주세요 :)</string>
    <string name="report_question">이 이파리를 신고하시겠습니까?</string>
    <string name="report_information">신고하면 이 이파리는 더이상 노출되지 않습니다.</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_ok">확인</string>
    <string name="leaf_report">신고하기</string>
    <string name="today_statistics">오늘 나와 같은 감정을 지닌 사람이\n%s명 있어요!</string>

</resources>
