<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="180dp"
    android:background="@drawable/bg_white_radius_16dp_with_stroke"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:id="@+id/alertDialogMessage"
        style="@style/Base.FTR.TextView.DialogMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/report_question" />

    <TextView
        android:id="@+id/alertDialogMessage2"
        style="@style/Base.FTR.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/report_information"
        android:textColor="@color/gray"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/negativeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_report_dialog_negative_button"
            android:text="@string/dialog_cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/positiveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_report_dialog_positive_button"
            android:text="@string/dialog_ok" />
    </LinearLayout>
</LinearLayout>
