<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_text_view"
            style="@style/Base.FTR.TextView.LABEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toTopOf="@id/input_edit_text"
            app:layout_constraintStart_toStartOf="@+id/input_edit_text"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/id_upper_case" />

        <EditText
            android:id="@+id/input_edit_text"
            style="@style/Base.FTR.EDIT_TEXT.EXPENDED"
            android:layout_height="32dp"
            android:layout_marginStart="28dp"
            app:layout_constraintEnd_toStartOf="@id/confirm_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_text_view"
            tools:hint="@string/id_example" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_button"
            style="@style/Base.FTR.Button.CONFIRM"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="28dp"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="@+id/input_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/input_edit_text"
            app:layout_constraintTop_toTopOf="@+id/input_edit_text" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/Base.FTR.Text.SMALL"
            app:layout_constraintStart_toStartOf="@id/input_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/input_edit_text"
            tools:text="@string/usable_id" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
