<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="360dp"
        android:layout_height="500dp"
        android:background="@color/white"
        tools:context=".main.fragments.dialogs.LeafReceiveFragment">

        <TextView
            android:id="@+id/leaf_title_text_view"
            style="@style/Base.FTR.TextView.DialogMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaf_receive_text"
            android:textSize="28sp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintBottom_toTopOf="@id/leaf_receive_text_view"
            app:layout_constraintTop_toBottomOf="@id/leaf_title_text_view"
            app:lottie_rawRes="@raw/lottie_falling_leaf"
            app:lottie_loop="true"
            />

        <TextView
            android:id="@+id/leaf_receive_text_view"
            style="@style/Base.FTR.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/leaf_category_chip_group"
            android:text="@string/shaking_leaf_text"/>

        <com.google.android.material.chip.ChipGroup
            style="@style/Widget.MaterialComponents.ChipGroup"
            android:id="@+id/leaf_category_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@id/leaf_receive_progress_bar">
            <com.google.android.material.chip.Chip
                style="@style/Base.FTR.Chip.Leaf"
                android:id="@+id/leaf_category_consolation_chip"
                android:text="@string/leaf_category_consolation"/>
            <com.google.android.material.chip.Chip
                style="@style/Base.FTR.Chip.Leaf"
                android:id="@+id/leaf_category_cheering_chip"
                android:layout_marginHorizontal="10dp"
                android:text="@string/leaf_category_cheering"/>
            <com.google.android.material.chip.Chip
                style="@style/Base.FTR.Chip.Leaf"
                android:id="@+id/leaf_category_free_chip"
                android:text="@string/leaf_category_free"/>
        </com.google.android.material.chip.ChipGroup>


        <ProgressBar
            android:id="@+id/leaf_receive_progress_bar"
            style="@style/Base.FTR.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginHorizontal="16dp"
            tools:progress="30"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
