<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <TextView
        style="@style/Base.FTR.TextView.DialogText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/sign_out_guide"
        app:layout_constraintEnd_toStartOf="@id/image_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/image_image_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/img_main_tree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirm_button_text_tiew"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:paddingTop="4dp"
        android:paddingBottom="8dp"
        android:text="@string/confirm"
        android:textAppearance="@style/Base.FTR.Text.Bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_button_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_image_view" />

    <TextView
        android:id="@+id/cancel_button_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="4dp"
        android:paddingBottom="8dp"
        android:text="@string/cancel"
        android:textAppearance="@style/Base.FTR.Text.Bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/confirm_button_text_tiew"
        app:layout_constraintTop_toTopOf="@id/confirm_button_text_tiew" />

</androidx.constraintlayout.widget.ConstraintLayout>
