<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.d101.presentation.welcome.viewmodel.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".welcome.fragments.SignInFragment">

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:src="@drawable/img_main_tree"
            app:layout_constraintBottom_toTopOf="@id/input_id_edit_text"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/input_id_edit_text"
            style="@style/Base.FTR.EditTextInput"
            android:layout_marginTop="16dp"
            android:hint="@string/input_id"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.id}"
            app:layout_constraintBottom_toTopOf="@id/input_password_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/logo_image_view"
            app:layout_constraintStart_toStartOf="@+id/logo_image_view"
            app:layout_constraintTop_toBottomOf="@id/logo_image_view" />

        <EditText
            android:id="@+id/input_password_edit_text"
            style="@style/Base.FTR.EditTextInput"
            android:layout_marginTop="16dp"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintBottom_toTopOf="@id/find_password_text_view"
            app:layout_constraintEnd_toEndOf="@+id/input_id_edit_text"
            app:layout_constraintStart_toStartOf="@+id/input_id_edit_text"
            app:layout_constraintTop_toBottomOf="@id/input_id_edit_text" />

        <TextView
            android:id="@+id/sign_up_text_view"
            style="@style/Base.FTR.Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onSignUpClicked()}"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toStartOf="@id/divider_text_view"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/input_password_edit_text"
            app:layout_constraintTop_toTopOf="@+id/divider_text_view" />

        <TextView
            android:id="@+id/divider_text_view"
            style="@style/Base.FTR.Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@string/text_divider"
            app:layout_constraintEnd_toStartOf="@id/find_password_text_view"
            app:layout_constraintStart_toEndOf="@id/sign_up_text_view"
            app:layout_constraintTop_toTopOf="@id/find_password_text_view" />

        <TextView
            android:id="@+id/find_password_text_view"
            style="@style/Base.FTR.Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.onFindPasswordClicked()}"
            android:text="@string/find_password"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
            app:layout_constraintEnd_toEndOf="@+id/input_password_edit_text"
            app:layout_constraintStart_toEndOf="@id/divider_text_view"
            app:layout_constraintTop_toBottomOf="@+id/input_password_edit_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_button"
            style="@style/Base.FTR.MainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.onSignInAttemptByFrientree()}"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/find_password_text_view" />

        <ImageView
            android:id="@+id/kakao_login_image_view"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:onClick="@{() -> viewModel.onSignInAttemptByNaver() }"
            android:src="@drawable/naver_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
